--- a/contes.css
+++ b/contes.css
@@ -15741,7 +15741,7 @@ blockquote .small:before {
 /*begin-commonstyles photoswipe*/
 /*! PhotoSwipe main CSS by Dmitry Semenov | photoswipe.com | MIT license */
 /*
-  Styles for basic PhotoSwipe functionality (sliding area, open/close transitions)
+	Styles for basic PhotoSwipe functionality (sliding area, open/close transitions)
 */
 /* pswp = photoswipe */
 .pswp {
@@ -15795,8 +15795,8 @@ blockquote .small:before {
   cursor: grabbing;
 }
 /*
-  Background is added as a separate element.
-  As animating opacity is much faster than animating rgba() background-color.
+	Background is added as a separate element.
+	As animating opacity is much faster than animating rgba() background-color.
 */
 .pswp__bg {
   position: absolute;
@@ -15872,15 +15872,15 @@ blockquote .small:before {
   left: 0;
 }
 /*
-  stretched thumbnail or div placeholder element (see below)
-  style is added to avoid flickering in webkit/blink when layers overlap
+	stretched thumbnail or div placeholder element (see below)
+	style is added to avoid flickering in webkit/blink when layers overlap
 */
 .pswp__img--placeholder {
   -webkit-backface-visibility: hidden;
 }
 /*
-  div element that matches size of large image
-  large image loads on top of it
+	div element that matches size of large image
+	large image loads on top of it
 */
 .pswp__img--placeholder--blank {
   background: #222;
@@ -15892,8 +15892,8 @@ blockquote .small:before {
   top: 0;
 }
 /*
-  Error message appears when image is not loaded
-  (JS option errorMsg controls markup)
+	Error message appears when image is not loaded
+	(JS option errorMsg controls markup)
 */
 .pswp__error-msg {
   position: absolute;
@@ -15915,19 +15915,19 @@ blockquote .small:before {
 /*! PhotoSwipe Default UI CSS by Dmitry Semenov | photoswipe.com | MIT license */
 /*
 
-  Contents:
+	Contents:
 
-  1. Buttons
-  2. Share modal and links
-  3. Index indicator ("1 of X" counter)
-  4. Caption
-  5. Loading indicator
-  6. Additional styles (root element, top bar, idle state, hidden state, etc.)
+	1. Buttons
+	2. Share modal and links
+	3. Index indicator ("1 of X" counter)
+	4. Caption
+	5. Loading indicator
+	6. Additional styles (root element, top bar, idle state, hidden state, etc.)
 
 */
 /*
 
-  1. Buttons
+	1. Buttons
 
  */
 /* <button> css reset */
@@ -16015,8 +16015,8 @@ blockquote .small:before {
   visibility: hidden;
 }
 /*
-  Arrow buttons hit area
-  (icon is added to :before pseudo-element)
+	Arrow buttons hit area
+	(icon is added to :before pseudo-element)
 */
 .pswp__button--arrow--left,
 .pswp__button--arrow--right {
@@ -16052,7 +16052,7 @@ blockquote .small:before {
 }
 /*
 
-  2. Share modal/popup and links
+	2. Share modal/popup and links
 
  */
 .pswp__counter,
@@ -16157,7 +16157,7 @@ a.pswp__share--download:hover {
 }
 /*
 
-  3. Index indicator ("1 of X" counter)
+	3. Index indicator ("1 of X" counter)
 
  */
 .pswp__counter {
@@ -16173,7 +16173,7 @@ a.pswp__share--download:hover {
 }
 /*
 
-  4. Caption
+	4. Caption
 
  */
 .pswp__caption {
@@ -16205,9 +16205,9 @@ a.pswp__share--download:hover {
 }
 /*
 
-  5. Loading indicator (preloader)
+	5. Loading indicator (preloader)
 
-  You can play with it here - http://codepen.io/dimsemenov/pen/yyBWoR
+	You can play with it here - http://codepen.io/dimsemenov/pen/yyBWoR
 
  */
 .pswp__preloader {
@@ -16255,9 +16255,9 @@ a.pswp__share--download:hover {
 }
 .pswp--css_animation .pswp__preloader__cut {
   /*
-      The idea of animating inner circle is based on Polymer ("material") loading indicator
-       by Keanu Lee https://blog.keanulee.com/2014/10/20/the-tale-of-three-spinners.html
-    */
+			The idea of animating inner circle is based on Polymer ("material") loading indicator
+			 by Keanu Lee https://blog.keanulee.com/2014/10/20/the-tale-of-three-spinners.html
+		*/
   position: relative;
   width: 7px;
   height: 14px;
@@ -16307,7 +16307,7 @@ a.pswp__share--download:hover {
 }
 /*
 
-  6. Additional styles
+	6. Additional styles
 
  */
 /* root element of UI */
@@ -16356,8 +16356,8 @@ a.pswp__share--download:hover {
   opacity: 0;
 }
 /*
-  pswp__ui--hidden class is added when controls are hidden
-  e.g. when user taps to toggle visibility of controls
+	pswp__ui--hidden class is added when controls are hidden
+	e.g. when user taps to toggle visibility of controls
 */
 .pswp__ui--hidden .pswp__top-bar,
 .pswp__ui--hidden .pswp__caption,
@@ -30160,124 +30160,88 @@ a.u-link.u-text-hover-grey-90:hover {
     }
     /** alt-color-rules **/
 
+.u-section-1 {min-height: 500px}
+.u-section-1 .u-image-1 {height: 304px; margin: 0 auto 0 0}
+.u-section-1 .u-tabs-1 {min-height: 105px; height: auto; margin: 0 auto 60px 0}
+.u-section-1 .u-tab-link-1 {background-image: none}
+.u-section-1 .u-tab-link-2 {background-image: none}
+.u-section-1 .u-tab-link-3 {background-image: none}
+.u-section-1 .u-tab-item-4 {margin-bottom: 0}
+.u-section-1 .u-tab-link-4 {background-image: none}
+.u-section-1 .u-container-layout-1 {padding: 30px}
+.u-section-1 .u-container-layout-2 {padding: 30px}
+.u-section-1 .u-container-layout-3 {padding: 30px}
+.u-section-1 .u-container-layout-4 {padding: 30px} 
 
-.u-section-1 .u-sheet-1 {min-height: 205px}
-.u-section-1 .u-text-1 {margin: 60px auto}.u-section-2 .u-sheet-1 {min-height: 710px}
-.u-section-2 .u-layout-wrap-1 {pointer-events: auto; width: 1125px; margin: 68px 0 60px auto}
-.u-section-2 .u-layout-cell-1 {min-height: 582px; pointer-events: auto}
-.u-section-2 .u-container-layout-1 {padding: 30px 60px}
-.u-section-2 .u-image-1 {height: 479px; margin: 0 -120px 0 auto}
-.u-section-2 .u-layout-cell-2 {min-height: 582px; pointer-events: auto}
-.u-section-2 .u-container-layout-2 {padding: 30px 60px}
-.u-section-2 .u-text-1 {margin: 136px 0 0}
-.u-section-2 .u-text-2 {margin: 20px 0 0} 
+@media (max-width: 1199px){ .u-section-1 .u-image-1 {margin-right: initial; margin-left: initial}
+.u-section-1 .u-tabs-1 {margin-right: initial; margin-left: initial} }
 
-@media (max-width: 1199px){ .u-section-2 .u-sheet-1 {min-height: 481px}
-.u-section-2 .u-layout-wrap-1 {width: 940px}
-.u-section-2 .u-layout-cell-1 {min-height: 486px; background-position: 50% 50%}
-.u-section-2 .u-image-1 {height: 379px; margin-right: initial; margin-left: initial}
-.u-section-2 .u-layout-cell-2 {min-height: 486px} }
+@media (max-width: 767px){ .u-section-1 .u-container-layout-1 {padding-left: 10px; padding-right: 10px}
+.u-section-1 .u-container-layout-2 {padding-left: 10px; padding-right: 10px}
+.u-section-1 .u-container-layout-3 {padding-left: 10px; padding-right: 10px}
+.u-section-1 .u-container-layout-4 {padding-left: 10px; padding-right: 10px} }.u-section-2 .u-sheet-1 {min-height: 380px}
+.u-section-2 .u-group-1 {width: 900px; min-height: 308px; height: auto; margin: 36px auto}
+.u-section-2 .u-container-layout-1 {padding: 30px}
+.u-section-2 .u-text-1 {font-weight: 700; margin: 26px 30px 0 -30px}
+.u-section-2 .u-text-2 {margin: 17px 0 -116px} 
 
-@media (max-width: 991px){ .u-section-2 .u-sheet-1 {min-height: 367px}
-.u-section-2 .u-layout-wrap-1 {width: 720px}
-.u-section-2 .u-layout-cell-1 {min-height: 100px}
-.u-section-2 .u-container-layout-1 {padding-left: 30px; padding-right: 30px}
-.u-section-2 .u-image-1 {height: 325px; margin-right: initial; margin-left: initial}
-.u-section-2 .u-layout-cell-2 {min-height: 100px}
-.u-section-2 .u-container-layout-2 {padding-left: 30px; padding-right: 30px} }
+@media (max-width: 1199px){ .u-section-2 .u-group-1 {min-height: 170px; margin-right: 40px}
+.u-section-2 .u-text-1 {margin-top: 0} }
 
-@media (max-width: 767px){ .u-section-2 .u-sheet-1 {min-height: 653px}
-.u-section-2 .u-layout-wrap-1 {width: 540px}
-.u-section-2 .u-container-layout-1 {padding-left: 10px; padding-right: 10px}
-.u-section-2 .u-image-1 {height: 563px; margin-right: initial; margin-left: initial}
-.u-section-2 .u-container-layout-2 {padding-left: 10px; padding-right: 10px} }
+@media (max-width: 991px){ .u-section-2 .u-group-1 {width: 720px; margin-right: 0} }
 
-@media (max-width: 575px){ .u-section-2 .u-sheet-1 {min-height: 446px}
-.u-section-2 .u-layout-wrap-1 {width: 340px}
-.u-section-2 .u-image-1 {height: 346px; margin-right: initial; margin-left: initial} }.u-section-3 {min-height: 100px}
-.u-section-3 .u-sheet-1 {min-height: 594px}
-.u-section-3 .u-layout-wrap-1 {margin: 0 auto 0 0}
-.u-section-3 .u-layout-cell-1 {min-height: 594px}
-.u-section-3 .u-container-layout-1 {padding: 30px 60px}
-.u-section-3 .u-text-1 {margin: 172px 0 0}
-.u-section-3 .u-text-2 {margin: 20px 0 0}
-.u-section-3 .u-layout-cell-2 {min-height: 594px}
-.u-section-3 .u-container-layout-2 {padding: 30px 60px}
-.u-section-3 .u-text-3 {margin: 172px 0 0}
-.u-section-3 .u-text-4 {margin: 20px 0 0} 
+@media (max-width: 767px){ .u-section-2 .u-group-1 {width: 540px}
+.u-section-2 .u-container-layout-1 {padding-left: 10px; padding-right: 10px} }
 
-@media (max-width: 1199px){ .u-section-3 .u-sheet-1 {min-height: 100px}
-.u-section-3 .u-layout-wrap-1 {margin-right: initial; margin-left: initial}
-.u-section-3 .u-layout-cell-1 {min-height: 490px}
-.u-section-3 .u-layout-cell-2 {min-height: 490px} }
+@media (max-width: 575px){ .u-section-2 .u-group-1 {width: 340px} }.u-section-3 .u-sheet-1 {min-height: 672px}
+.u-section-3 .u-group-1 {width: 1026px; min-height: 581px; height: auto; margin: 50px 15px 60px auto}
+.u-section-3 .u-container-layout-1 {padding: 21px 30px}
+.u-section-3 .u-text-1 {font-weight: 700; margin: 2px 0 0}
+.u-section-3 .u-tabs-1 {min-height: 401px; height: auto; width: 842px; margin: 6px auto -69px}
+.u-section-3 .u-tab-link-1 {background-image: none}
+.u-section-3 .u-tab-link-2 {background-image: none}
+.u-section-3 .u-tab-link-3 {background-image: none}
+.u-section-3 .u-tab-item-4 {margin-bottom: 0}
+.u-section-3 .u-tab-link-4 {background-image: none}
+.u-section-3 .u-tab-item-5 {margin-bottom: 0}
+.u-section-3 .u-tab-link-5 {background-image: none}
+.u-section-3 .u-container-layout-2 {padding: 30px}
+.u-section-3 .u-text-2 {margin-top: 0; font-size: 1.25rem; text-transform: uppercase; font-weight: 700; margin-bottom: 0}
+.u-section-3 .u-text-3 {margin: 6px auto 0 0}
+.u-section-3 .u-text-4 {font-size: 1.25rem; text-transform: uppercase; font-weight: 700; margin: 34px auto 0 0}
+.u-section-3 .u-text-5 {margin-left: 0; margin-top: 6px}
+.u-section-3 .u-container-layout-3 {padding: 30px}
+.u-section-3 .u-text-6 {margin-left: 0; font-size: 1.25rem; text-transform: uppercase; font-weight: 700; margin-top: 0; margin-bottom: 0}
+.u-section-3 .u-text-7 {margin-top: 20px; margin-bottom: 0}
+.u-section-3 .u-container-layout-4 {padding: 30px}
+.u-section-3 .u-text-8 {font-size: 1.25rem; text-transform: uppercase; font-weight: 700; margin: 0 auto 0 0}
+.u-section-3 .u-text-9 {margin: 20px 496px 0 0}
+.u-section-3 .u-container-layout-5 {padding: 30px}
+.u-section-3 .u-text-10 {font-size: 1.25rem; text-transform: uppercase; font-weight: 700; margin: 0 auto 0 0}
+.u-section-3 .u-text-11 {margin: 20px auto 0 0}
+.u-section-3 .u-container-layout-6 {padding: 30px}
+.u-section-3 .u-text-12 {font-size: 1.25rem; text-transform: uppercase; font-weight: 700; margin: 0 auto 0 0}
+.u-section-3 .u-text-13 {margin: 20px auto 0 0} 
 
-@media (max-width: 991px){ .u-section-3 .u-layout-cell-1 {min-height: 100px}
-.u-section-3 .u-container-layout-1 {padding-left: 30px; padding-right: 30px}
-.u-section-3 .u-layout-cell-2 {min-height: 100px}
-.u-section-3 .u-container-layout-2 {padding-left: 30px; padding-right: 30px} }
+@media (max-width: 1199px){ .u-section-3 .u-group-1 {width: 800px; min-height: 101px; margin-right: auto}
+.u-section-3 .u-tabs-1 {margin-top: -63px; margin-right: -463px; margin-bottom: 0}
+.u-section-3 .u-text-3 {margin-right: 0}
+.u-section-3 .u-text-4 {margin-top: -10px} }
 
-@media (max-width: 767px){ .u-section-3 .u-container-layout-1 {padding-left: 10px; padding-right: 10px}
-.u-section-3 .u-container-layout-2 {padding-left: 10px; padding-right: 10px} }.u-section-4 .u-sheet-1 {min-height: 2033px}
-.u-section-4 .u-text-1 {margin: 60px 20px 0}
-.u-section-4 .u-text-2 {margin: 20px 0 0}
-.u-section-4 .u-gallery-1 {height: 626px; grid-gap: 17px 17px; margin: 30px auto 0}
-.u-section-4 .u-gallery-inner-1 {grid-template-columns: auto; grid-gap: 17px 17px}
-.u-section-4 .u-over-slide-1 {background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2)); padding: 20px}
-.u-section-4 .u-image-1 {width: 570px; height: 820px; margin: 30px auto 0}
-.u-section-4 .u-image-2 {width: 387px; height: 740px; margin: 30px auto 60px} 
+@media (max-width: 991px){ .u-section-3 .u-group-1 {width: 720px} }
 
-@media (max-width: 1199px){ .u-section-4 .u-sheet-1 {min-height: 1923px}
-.u-section-4 .u-text-1 {margin-left: 0; margin-right: 0}
-.u-section-4 .u-gallery-1 {height: 516px; grid-template-columns: auto auto auto; margin-right: initial; margin-left: initial}
-.u-section-4 .u-gallery-inner-1 {grid-template-columns: repeat(1, auto)} }
+@media (max-width: 767px){ .u-section-3 .u-group-1 {width: 540px}
+.u-section-3 .u-container-layout-1 {padding-left: 10px; padding-right: 10px}
+.u-section-3 .u-container-layout-2 {padding-left: 10px; padding-right: 10px}
+.u-section-3 .u-container-layout-3 {padding-left: 10px; padding-right: 10px}
+.u-section-3 .u-container-layout-4 {padding-left: 10px; padding-right: 10px}
+.u-section-3 .u-text-9 {margin-right: 396px}
+.u-section-3 .u-container-layout-5 {padding-left: 10px; padding-right: 10px}
+.u-section-3 .u-container-layout-6 {padding-left: 10px; padding-right: 10px} }
 
-@media (max-width: 991px){ .u-section-4 .u-sheet-1 {min-height: 923px}
-.u-section-4 .u-gallery-1 {height: 395px; grid-template-columns: auto auto; margin-right: initial; margin-left: initial} }
-
-@media (max-width: 767px){ .u-section-4 .u-sheet-1 {min-height: 1784px}
-.u-section-4 .u-gallery-1 {height: 296px; grid-template-columns: auto; margin-right: initial; margin-left: initial}
-.u-section-4 .u-image-1 {width: 540px; height: 777px} }
-
-@media (max-width: 575px){ .u-section-4 .u-sheet-1 {min-height: 1210px}
-.u-section-4 .u-gallery-1 {height: 186px; margin-right: initial; margin-left: initial}
-.u-section-4 .u-image-1 {width: 340px; height: 489px}
-.u-section-4 .u-image-2 {width: 340px; height: 650px} }.u-section-5 .u-sheet-1 {min-height: 2764px}
-.u-section-5 .u-text-1 {margin: 13px 20px 0}
-.u-section-5 .u-text-2 {margin: 20px 0 0}
-.u-section-5 .u-gallery-1 {height: 1430px; grid-gap: 17px 17px; width: 1073px; margin: 108px auto 0}
-.u-section-5 .u-gallery-inner-1 {grid-template-columns: auto; grid-gap: 17px 17px}
-.u-section-5 .u-over-slide-1 {background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2)); padding: 20px}
-.u-section-5 .u-image-1 {width: 570px; height: 800px; margin: 30px auto 0}
-.u-section-5 .u-image-2 {width: 470px; height: 780px; margin: 30px auto 60px} 
-
-@media (max-width: 1199px){ .u-section-5 .u-sheet-1 {min-height: 2587px}
-.u-section-5 .u-text-1 {margin-left: 0; margin-right: 0}
-.u-section-5 .u-gallery-1 {height: 1253px; grid-template-columns: auto auto auto; width: 940px}
-.u-section-5 .u-gallery-inner-1 {grid-template-columns: repeat(1, auto)} }
-
-@media (max-width: 991px){ .u-section-5 .u-sheet-1 {min-height: 923px}
-.u-section-5 .u-gallery-1 {height: 960px; grid-template-columns: auto auto; width: 720px} }
-
-@media (max-width: 767px){ .u-section-5 .u-sheet-1 {min-height: 1784px}
-.u-section-5 .u-gallery-1 {height: 720px; grid-template-columns: auto; width: 540px}
-.u-section-5 .u-image-1 {width: 540px; height: 758px} }
-
-@media (max-width: 575px){ .u-section-5 .u-sheet-1 {min-height: 1210px}
-.u-section-5 .u-gallery-1 {height: 453px; width: 340px}
-.u-section-5 .u-image-1 {width: 340px; height: 477px}
-.u-section-5 .u-image-2 {width: 340px; height: 564px} }.u-section-6 .u-sheet-1 {min-height: 320px}
-.u-section-6 .u-group-1 {width: 800px; min-height: 200px; height: auto; margin: 60px auto}
-.u-section-6 .u-container-layout-1 {padding: 30px 60px}
-.u-section-6 .u-text-1 {margin: 0}
-.u-section-6 .u-text-2 {margin: 20px 0 0} 
-
-@media (max-width: 991px){ .u-section-6 .u-group-1 {width: 720px}
-.u-section-6 .u-container-layout-1 {padding-left: 30px; padding-right: 30px} }
-
-@media (max-width: 767px){ .u-section-6 .u-group-1 {width: 540px}
-.u-section-6 .u-container-layout-1 {padding-left: 10px; padding-right: 10px} }
-
-@media (max-width: 575px){ .u-section-6 .u-group-1 {width: 340px} }
+@media (max-width: 575px){ .u-section-3 .u-group-1 {width: 340px}
+.u-section-3 .u-tabs-1 {width: 320px; margin-right: 0}
+.u-section-3 .u-text-9 {margin-right: 196px} }
 
 
 /*end-variables sitestylecss*/
@@ -30294,13 +30258,17 @@ a.u-link.u-text-hover-grey-90:hover {
 @media (max-width: 767px){ .u-header .u-image-1 {width: auto} }
 
  .u-footer {background-image: none}
-.u-footer .u-sheet-1 {min-height: 120px}
-.u-footer .u-text-1 {width: 417px; margin: 49px auto} 
-@media (max-width: 1199px){ .u-footer .u-sheet-1 {min-height: 99px} }
+.u-footer .u-sheet-1 {min-height: 217px}
+.u-footer .u-text-1 {margin: 49px 688px 0 35px}
+.u-footer .u-text-2 {margin: -110px 282px 60px auto} 
+@media (max-width: 1199px){ .u-footer .u-sheet-1 {min-height: 99px}
+.u-footer .u-text-1 {width: 417px; margin-left: 35px; margin-right: 688px}
+.u-footer .u-text-2 {margin-right: 282px} }
 @media (max-width: 991px){ .u-footer .u-sheet-1 {min-height: 76px} }
-@media (max-width: 767px){ .u-footer .u-sheet-1 {min-height: 57px} }
+@media (max-width: 767px){ .u-footer .u-sheet-1 {min-height: 57px}
+.u-footer .u-text-1 {margin-left: 0; margin-right: 543px} }
 @media (max-width: 575px){ .u-footer .u-sheet-1 {min-height: 36px}
-.u-footer .u-text-1 {width: 340px} }
+.u-footer .u-text-1 {width: 340px; margin-right: 343px} }
 
  /*begin-variables base-font-size*/ 
  html { font-size: 16px; }
